<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_layout_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="@string/tools_title" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00009909"
            android:gravity="center"
            android:minHeight="50dp"
            android:paddingBottom="17dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="10dp"
            android:textColor="#352424"
            android:textSize="14sp"
            android:visibility="visible"
            tools:text="@string/tools_message" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:divider="@drawable/vertical_divider_line"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/dialog_cancel_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_cancel_button_bg"
                android:gravity="center"
                android:textColor="@color/button_text_color"
                android:textSize="15sp"
                android:visibility="visible"
                tools:text="@string/tools_cancel" />

            <TextView
                android:id="@+id/dialog_confirm_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_confirm_button_bg"
                android:gravity="center"
                android:textColor="@color/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:text="@string/tools_ok" />

            <TextView
                android:id="@+id/dialog_single_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_single_button_bg"
                android:gravity="center"
                android:textColor="@color/button_text_color"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="@string/tools_i_know" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>